Backport Fish Parallel World Ticking API + partial mob-spawning opt (batch 17)
- Fish-Parallel-World-Ticking-API: added Server#isParallelWorldTickingEnabled
  and World#getTickTimes/getAverageTickTime to leaf-api's Server.java and
  World.java, with CraftServer/CraftWorld implementations. This is purely
  a monitoring API exposing the parallel-world-ticking feature
  (org.dreeam.leaf.config.modules.async.SparklyPaperParallelWorldTicking)
  that already exists in this codebase — no new runtime behavior, just
  visibility for perf-monitoring plugins.
- optimize-mob-spawning: ported 2 of 3 hunks — CraftServer and CraftWorld's
  spawnCategoryLimit now use an int[] indexed by SpawnCategory.ordinal()
  instead of an Object2IntOpenHashMap. Skipped the third hunk
  (CustomChunkGenerator#getMobsAtChunk) since InternalChunkGenerator has
  no such method to override in 1.21.4.

Investigated and confirmed already present: Player-canSee-by-entity-UUID
(Player.java + CraftPlayer.java both already have it under Gale/Purpur).

Investigated and deferred:
- SIMD-support (both paper-patches and leaf-api variants, plus a re-check
  of the minecraft-patches one): the real
  gg.pufferfish.pufferfish.simd.SIMDDetection class this all depends on
  can't be found anywhere in Leaf's or Pufferfish's repos — only the JVM
  module flag (--add-modules=jdk.incubator.vector) is present in the
  build, with no actual implementation. Would need to write the whole
  vectorized-math class from scratch.
- The 4-patch Virtual-thread-support family: no VirtualThreadSupport
  config module or any virtual-thread-based executor initialization
  exists anywhere in this codebase; would need all 4 patches plus new
  config infra as one coordinated change (threading semantics, not
  low-risk).
- Reduce-array-allocations (paper-patches layer): same missing
  me.titaniumtown.ArrayConstants dependency as its minecraft-patches
  sibling.
- async-chunk-sender: read the full 248-line minecraft-patches companion
  pat